Put StaticCoral at the bottom of schedule page. Fixed bug with nav bar where on mobile view the purple nav background doesn't have enough height.

--- a/site/src/app/components/nav/Nav.scss
+++ b/site/src/app/components/nav/Nav.scss
@@ -87,10 +87,11 @@
 				text-align: right;
 				align-items: center;
 				top: 10px;
-				height: 140px;
+				height: fit-content;
 
 				padding-top: 10px;
 				padding-left: max(60px, 10%);
+				padding-bottom: 15px;
 				
 				background-image: linear-gradient(#b9a2c8, #c8a0bc, #a094ca);
 
