--- a/site/src/app/views/schedule/Schedule.scss
+++ b/site/src/app/views/schedule/Schedule.scss
@@ -9,10 +9,6 @@
 	flex-direction: column;
 	color: white;
 	overflow-x: hidden;
-	background-image: url($coral); // TODO delete background specifications and use StaticCoral
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: 100% auto;
 
 
 	#schedule-block {
